--- a/Fungi.cabal
+++ b/Fungi.cabal
@@ -43,18 +43,18 @@ executable fungi
   build-depends:
     mwc-random == 0.13.*,
     containers == 0.5.*,
-    mtl == 2.1.*,
+    mtl == 2.2.*,
     old-time == 1.1.*,
     bytestring == 0.10.*,
     ListZipper == 1.2.*,
     random == 1.0.*,
     filepath == 1.3.*,
     directory == 1.2.*,
-    process == 1.1.*,
-    transformers == 0.3.*,
+    process == 1.2.*,
+    transformers == 0.4.*,
     tuple == 0.3.*,
-    base == 4.6.*
-  
+    base > 4.6  
+
   -- Directories containing source files.
   hs-source-dirs:      src
 
